@@ -2,6 +2,7 @@ mpdscribble 0.17 - not yet released
   * secure permissions for mpdscribble.conf
   * added "daemon_user" configuration option
   * escape '&'
+  * import AS protocol v1.1 timestamps
 
 
 mpdscribble 0.16 - 2009-01-17
